--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.16.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -32,6 +32,13 @@ dependencies:
   flutter_overboard: ^3.1.1
   google_fonts: ^2.2.0
   font_awesome_flutter: ^9.2.0
+  curved_navigation_bar: ^1.0.2
+  provider: ^6.0.2
+  email_validator: ^2.0.1
+  firebase_auth: ^3.3.6
+  cloud_firestore: ^3.1.7
+  image_picker: ^0.8.4+7
+  firebase_storage: ^10.2.7
 
 
 dev_dependencies:
