--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cloud_firestore: ^3.1.7
   image_picker: ^0.8.4+7
   firebase_storage: ^10.2.7
+  cached_network_image: ^3.2.0
 
 
 dev_dependencies:
