--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   image_picker: ^0.8.4+7
   firebase_storage: ^10.2.7
   cached_network_image: ^3.2.0
+  timeago: ^3.2.2
 
 
 dev_dependencies:
