--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -12,6 +12,12 @@
 		<string>6.0</string>
 		<key>CFBundleName</key>
 		<string>senior_design_project</string>
+		<key>NSPhotoLibraryUsageDescription</key>
+		<string>describe why your app needs permission for the photo library</string>
+		<key>NSCameraUsageDescription</key>
+		<string>describe why your app needs access to the camera</string>
+		<key>NSMicrophoneUsageDescription</key>
+		<string>describe why your app needs access to the microphone, if you intend to record videos</string>
 		<key>CFBundlePackageType</key>
 		<string>APPL</string>
 		<key>CFBundleShortVersionString</key>
