--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cached_network_image: ^3.2.0
   timeago: ^3.2.2
   flutter_native_splash: ^2.0.5
+  image_cropper: ^1.5.0
 
 
 dev_dependencies:
