--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,22 +41,23 @@ dependencies:
   firebase_storage: ^10.2.7
   cached_network_image: ^3.2.0
   timeago: ^3.2.2
-  flutter_native_splash: ^2.0.5
   image_cropper: ^1.5.0
+  flutter_spinkit: ^5.1.0
+
+
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  lint: ^1.7.2
-  #lint kod yazım hatalarını düzeltmek için
-#  flutter_native_splash: ^2.0.5
+  lint: ^1.8.2
+  flutter_native_splash: ^2.1.6
 
-#flutter_native_splash:
-#  image: assets/images/logo.png
-#  color: "#FBFAFB"
-
-
+flutter_native_splash:
+  image: assets/images/logo2.png
+  color: "#FBFAFB"
+  #if u want to change splash screen image, you should run below:
+  # flutter pub run flutter_native_splash:create
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
