--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,21 +27,21 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  animated_text_kit: ^4.1.1
+  cupertino_icons: ^1.0.5
+  animated_text_kit: ^4.2.2
   flutter_overboard: ^3.1.1
-  google_fonts: ^2.2.0
-  font_awesome_flutter: ^9.2.0
-  curved_navigation_bar: ^1.0.2
-  provider: ^6.0.2
-  email_validator: ^2.0.1
-  firebase_auth: ^3.3.6
-  cloud_firestore: ^3.1.7
-  image_picker: ^0.8.4+7
-  firebase_storage: ^10.2.7
-  cached_network_image: ^3.2.0
-  timeago: ^3.2.2
-  image_cropper: ^1.5.0
+  google_fonts: ^3.0.1
+  font_awesome_flutter: ^10.2.1
+  curved_navigation_bar: ^1.0.3
+  provider: ^6.0.4
+  email_validator: ^2.1.17
+  firebase_auth: ^4.1.3
+  cloud_firestore: ^4.1.0
+  image_picker: ^0.8.6
+  firebase_storage: ^11.0.6
+  cached_network_image: ^3.2.2
+  timeago: ^3.3.0
+  image_cropper: ^3.0.1
   flutter_spinkit: ^5.1.0
 
 
